--- a/Docker/network.docker-compose.yaml
+++ b/Docker/network.docker-compose.yaml
@@ -2,15 +2,21 @@ networks:
   InternetAccessNet:
     name: Internet access
     driver: bridge
+    driver_opts:
+      com.docker.network.bridge.enable_icc: "false"
+  
   MicroservicesNet:
     name: Microservices Network
     internal: true
+  
   MongoNet:
     name: Mongo Network
     internal: true
+  
   PostgresNet:
     name: Postgres Network
     internal: true
+  
   RedisNet:
     name: Redis Network
     internal: true
