--- a/Docker/microservices.docker-compose.yaml
+++ b/Docker/microservices.docker-compose.yaml
@@ -48,6 +48,7 @@ services:
     #   - 50053:50051
     networks:
       - MicroservicesNet
+      - InternetAccessNet
     healthcheck:
       test: ["CMD", "python", "HealthCheck.py"]
       interval: 30s
