--- a/Docker/microservices.docker-compose.yaml
+++ b/Docker/microservices.docker-compose.yaml
@@ -47,8 +47,10 @@ services:
     # ports:
     #   - 50053:50051
     networks:
-      - MicroservicesNet
-      - InternetAccessNet
+      MicroservicesNet:
+        aliases:
+          - CoinGecko_API_inernal
+      InternetAccessNet:
     healthcheck:
       test: ["CMD", "python", "HealthCheck.py"]
       interval: 30s
