--- a/compose.yaml
+++ b/compose.yaml
@@ -37,7 +37,7 @@ services:
       - 3000:3000
     networks:
       - MicroservicesNet
-      - InternetAccessNet
+      - ApplicationAccessNet
     healthcheck:
       test: ["CMD", "wget", "--spider", "--no-verbose", "--tries=1", "http://Grafana:3000/api/health"]
       start_period: 2s
@@ -64,7 +64,7 @@ services:
       - 80:80
     networks:
       - MicroservicesNet
-      - InternetAccessNet
+      - ApplicationAccessNet
     volumes:
       - /var/run/docker.sock:/tmp/docker.sock:ro
       - ./config/nginx.conf:/etc/nginx/nginx.conf:ro
