--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,7 +25,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Stop Existing Containers
-        run: docker compose down -v -t 20 --remove-orphans
+        run: docker compose --profile "*" down -v -t 20 --remove-orphans
 
       - name: Run Containers
-        run: docker compose --profile APP up -d --force-recreate
+        run: docker compose --profile "*" up -d --force-recreate
