add redirect to frontend homepage

--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -23,9 +23,12 @@ http {
   server {
     listen 80;
 
-    server_name localhost thdc thdc.tail8ec47f.ts.net; # Tailscale VPN domain
+    server_name thdc.tail8ec47f.ts.net thdc; # Tailscale VPN domain
 
     location / {
+      return 301 $scheme://$server_name/en/home;
+    }
+    location ~* ^/(en|pl) {
       proxy_set_header X-App-Server "$server_name";
       proxy_pass http://Frontend;
     }
