add DB_manager dependency on Mongo_Manager

--- a/Docker/microservices.docker-compose.yaml
+++ b/Docker/microservices.docker-compose.yaml
@@ -135,3 +135,5 @@ services:
     depends_on:
       Postgres:
         condition: service_healthy
+      Mongo_Manager:
+        condition: service_healthy
