--- a/.github/workflows/get-service-status.yml
+++ b/.github/workflows/get-service-status.yml
@@ -1,9 +1,9 @@
 name: Service Status
 
-on:
-  workflow_dispatch:
-  schedule:
-    - cron: '0,5,10,15,20,25,30,35,40,45,50,55 * * * *'
+#on:
+#  workflow_dispatch:
+#  schedule:
+#    - cron: '0,5,10,15,20,25,30,35,40,45,50,55 * * * *'
 
 
 jobs:
